# Bring-me-the-engine

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  menu.ini  rebuild.sh
.VSCodeCounter/2025-06-30_18-45-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-01_13-47-07/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-01_21-29-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-02_13-57-47/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-03_18-17-41/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-07-06_23-38-17/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Bring_me_the_engine/: menu.ini  rebuild.sh
Bring_me_the_engine/.VSCodeCounter/2025-07-16_01-50-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
Bring_me_the_engine/assets/scenes/: scene1.json  scene2.json
Bring_me_the_engine/include/: Globals.h
Bring_me_the_engine/include/camera/: Camera.h  Frustum.h
Bring_me_the_engine/include/engine/: Entity.h  Light.h  LightSettings.h  LightingManager.h  Material.h  Mesh.h  Scene.h
Bring_me_the_engine/include/engine/SceneLoader/: SceneLoader.h  ScenePreloaded.h
Bring_me_the_engine/include/geometry/: Cube.h  Floor.h  Skybox_mesh.h  Sphere.h
Bring_me_the_engine/include/input/: Callbacks.h  ClavierSouris.h  EntityCreator.h
Bring_me_the_engine/include/math/: Color.h  PlaneBoundingVolume.h  Quat.h  Tang_Bitang.h  Vec.h
Bring_me_the_engine/include/math/intersect/: IntersectInfo.h  IntersectUtils.h  Ray.h
Bring_me_the_engine/include/rendering/: Renderer.h  TextureManager.h
Bring_me_the_engine/include/rendering/GestionTextures/: Texture.h  TextureManager.h
Bring_me_the_engine/include/shadows/: DirectionalShadowMap.h
Bring_me_the_engine/include/system/: Application.h  PathResolver.h
Bring_me_the_engine/include/ui/: Menu.h  Sections.h  SectionsUtilitary.h
Bring_me_the_engine/shaders/debug/: bounding_box.frag
Bring_me_the_engine/shaders/main_shaders/: vertex.vert
Bring_me_the_engine/shaders/shadows/: dir_shadow.frag  dir_shadow.vert  ponc_shadow.vert
Bring_me_the_engine/src/: Globals.cpp  main.cpp
Bring_me_the_engine/src/camera/: Camera.cpp  Frustum.cpp
Bring_me_the_engine/src/engine/: Entity.cpp  Light.cpp  LightingManager.cpp  Mesh.cpp  Scene.cpp
Bring_me_the_engine/src/engine/SceneLoader/: SceneLoader.cpp  ScenePreloaded.cpp
Bring_me_the_engine/src/input/: Callbacks.cpp  ClavierSouris.cpp  EntityCreator.cpp
Bring_me_the_engine/src/math/: Mat4.cpp  Quat.cpp  Vec.cpp
Bring_me_the_engine/src/math/intersect/: IntersectUtils.cpp  Ray.cpp
Bring_me_the_engine/src/rendering/: Renderer.cpp  Shader.cpp  Skybox.cpp  TextureManager.cpp
Bring_me_the_engine/src/rendering/GestionTextures/: Texture.cpp  TextureManager.cpp
Bring_me_the_engine/src/system/: Application.cpp  PathResolver.cpp
Bring_me_the_engine/src/ui/: Menu.cpp  Sections.cpp  SectionsUtilitary.cpp
Competences_acquises/: Callback.cpp
assets/: bois.jpg:Zone.Identifier
include/: Globals.h
include/base/: Color.h  Frustum.h  PlaneBoundingVolume.h  Shader.h  Skybox.h  Vec.h  Vertex.h
include/camera/: Camera.h  Frustum.h
include/engine/: Camera.h  Clavier.h  ClavierSouris.h  Entity.h  Light.h  LightSettings.h  LightingManager.h  Material.h  Mesh.h  Renderer.h  Scene.h  Shader.h  Vertex.h
include/geometry/: Cube.h  Floor.h  Skybox_mesh.h
include/input/: ClavierSouris.h
include/math/: Color.h  PlaneBoundingVolume.h  Tang_Bitang.h  Vec.h
include/rendering/: Renderer.h  Shader.h  ShadowManager.h  Skybox.h  Texture.h  Vertex.h
include/shadows/: DirectionalShadowMap.h  PonctualShadowMap.h  ShadowMapBase.h
include/tools/: Tang_Bitang.h  Trigo.h
include/ui/: Menu.h  Sections.h
include/utils/: Cube.h  Floor.h  MeshUtils.h  Sphere.h
shaders/: shadow.frag  triangle.frag  vertex.frag  vertex.vert
shaders/debug/: debug_cubemap_shadow.frag  debug_cubemap_shadow.vert  quad.frag  quad.vert
shaders/main_shaders/: light_pos.frag  skybox.vert  vertex.frag  vertex.vert
shaders/shadows/: dir_shadow.frag  ponc_shadow.frag  ponc_shadow.geom  ponc_shadow.vert
src/: Globals.cpp  main.cpp
src/base/: Frustum.cpp  PlaneBoundingVolume.cpp  Shader.cpp  Skybox.cpp  Texture.cpp  Vec.cpp
src/camera/: Camera.cpp  Frustum.cpp
src/engine/: Camera.cpp  Clavier.cpp  ClavierSouris.cpp  Entity.cpp  LightingManager.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Shader.cpp
src/input/: ClavierSouris.cpp
src/math/: PlaneBoundingVolume.cpp  Vec.cpp
src/rendering/: Renderer.cpp  Shader.cpp  ShadowManager.cpp  Skybox.cpp  Texture.cpp
src/shadows/: DirectionalShadowMap.cpp  PonctualShadowMap.cpp
src/ui/: Menu.cpp  Sections.cpp
tests/: test_mat4.cpp  test_vec.cpp  test_vec3.cpp
